--- a/02 - JS + CSS Clock/index-START.html
+++ b/02 - JS + CSS Clock/index-START.html
@@ -15,7 +15,6 @@
       </div>
     </div>
 
-
   <style>
     html {
       background:#018DED url(http://unsplash.it/1500/1000?image=881&blur=50);
@@ -61,11 +60,41 @@
       background:black;
       position: absolute;
       top:50%;
+      transform-origin: 100%;
+      transform: rotate(90deg);
+      transition: all 0.05s;
+      transition-timing-function: cubic-bezier(0.1, 2.7, .58, 1);
     }
 
   </style>
 
   <script>
+
+    const secondHand = document.querySelector('.second-hand');
+
+    function setDate() {
+      const now = new Date();
+      const seconds = now.getSeconds();
+      const secondsDegrees = ((seconds / 60) * 360) + 90;
+      secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
+      console.log(seconds);
+
+      const minHand = document.querySelector('.min-hand');
+
+      const mins = now.getMinutes();
+      const minsDegrees = ((mins / 60) * 360) + 90;
+      minHand.style.transform = `rotate(${minsDegrees}deg)`;
+      console.log(mins);
+
+      const hourHand = document.querySelector('.hour-hand');
+
+      const hours = now.getHours();
+      const hoursDegrees = ((hours / 60) * 360) + 90;
+      hourHand.style.transform = `rotate(${hoursDegrees}deg)`;
+      console.log(hours);
+    }
+
+    setInterval(setDate, 1000);
 
 
   </script>
